# nfwm

./: .gitignore  LICENSE  README.md
docs/: feature-parity-checklist.md  rewrite-charter.md  risk-register.md
rust/: .gitignore  Cargo.toml
rust/nfwm-app/: Cargo.toml
rust/nfwm-app/src/: main.rs
rust/nfwm-core/: Cargo.toml
rust/nfwm-core/src/: lib.rs  traits.rs
rust/nfwm-core/src/commands/: action.rs  intent.rs  mod.rs
rust/nfwm-core/src/input/: engine.rs  keybinding.rs  mod.rs  window_mover.rs
rust/nfwm-core/src/layout/: flex.rs  mod.rs  node.rs  panel.rs  tree.rs
rust/nfwm-core/src/settings/: mod.rs  model.rs
rust/nfwm-core/src/tiling/: error.rs  mod.rs  multi_display.rs  service.rs  workspace.rs
rust/nfwm-core/src/types/: geometry.rs  identifiers.rs  mod.rs
rust/nfwm-core/src/window/: classifier.rs  discovery.rs  mod.rs  registry.rs
rust/nfwm-ui/: Cargo.toml
rust/nfwm-ui/src/: lib.rs
rust/nfwm-ui/src/overlay/: host.rs  mod.rs  renderer.rs
rust/nfwm-ui/src/settings_ui/: mod.rs  window.rs
rust/nfwm-ui/src/toast/: mod.rs  service.rs
rust/nfwm-ui/src/tray/: icon.rs  menu.rs  mod.rs
rust/nfwm-win32/: Cargo.toml
rust/nfwm-win32/src/: lib.rs
rust/nfwm-win32/src/display/: display_manager.rs  mod.rs  monitor.rs
rust/nfwm-win32/src/hooks/: keyboard.rs  mod.rs  mouse.rs
rust/nfwm-win32/src/ipc/: copydata.rs  mod.rs
rust/nfwm-win32/src/virtual_desktop/: mod.rs
rust/nfwm-win32/src/window/: manager.rs  mod.rs  properties.rs  window_id.rs
