[workspace]
members = [
    "nfwm-core",
    "nfwm-win32",
    "nfwm-ui",
    "nfwm-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["nfwm Contributors"]
license = "MIT"
repository = "https://github.com/hansel/nfwm"

[workspace.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_UI_HiDpi", "Win32_Devices_Display", "Win32_System_Com", "Win32_Security", "Win32_System_Ole", "Win32_System_DataExchange"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
