[package]
name = "nfwm-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "nfwm"
path = "src/main.rs"

[dependencies]
nfwm-core = { path = "../nfwm-core" }
nfwm-win32 = { path = "../nfwm-win32" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
