[package]
name = "nfwm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
# Property testing, etc.
